Refactor: Consolidate image file search logic
Introduce a helper function `find_image_files_recursive` to abstract the logic for finding image files recursively within a directory. Replace duplicated file searching code in preprocessing, verification, and visualization steps with calls to this new helper function to improve code maintainability and readability.

--- a/tasks/week_5_tasks/Task_CNN_Scratch.ipynb
+++ b/tasks/week_5_tasks/Task_CNN_Scratch.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNPwm3gcK88Y4IFF9EzJ6bY",
+      "authorship_tag": "ABX9TyPZd5w5pBbokegU6VZ08aQC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -401,23 +401,22 @@
         "\n",
         "print(f\"Actual root directory for raw images: {ACTUAL_RAW_DATA_ROOT}\")\n",
         "\n",
-        "# List a few files to confirm - Search recursively for image files\n",
-        "raw_image_files = glob.glob(os.path.join(ACTUAL_RAW_DATA_ROOT, '**', '*.*'), recursive=True)\n",
-        "# Filter for image files specifically\n",
+        "# Find all image files recursively and store in a global variable\n",
         "image_extensions = ['.jpg', '.jpeg', '.png']\n",
-        "raw_image_files = [f for f in raw_image_files if os.path.splitext(f)[1].lower() in image_extensions]\n",
+        "ALL_RAW_IMAGE_FILES = glob.glob(os.path.join(ACTUAL_RAW_DATA_ROOT, '**', '*.*'), recursive=True)\n",
+        "ALL_RAW_IMAGE_FILES = [f for f in ALL_RAW_IMAGE_FILES if os.path.splitext(f)[1].lower() in image_extensions]\n",
         "\n",
-        "\n",
-        "print(f\"Found {len(raw_image_files)} raw image files.\")\n",
-        "if len(raw_image_files) > 5:\n",
-        "    print(\"First 5 raw files:\", raw_image_files[:5])\n",
-        "elif len(raw_image_files) > 0:\n",
-        "     print(\"Raw files:\", raw_image_files)\n",
+        "print(f\"Found {len(ALL_RAW_IMAGE_FILES)} raw image files.\")\n",
+        "if len(ALL_RAW_IMAGE_FILES) > 5:\n",
+        "    print(\"First 5 raw files:\", ALL_RAW_IMAGE_FILES[:5])\n",
+        "elif len(ALL_RAW_IMAGE_FILES) > 0:\n",
+        "     print(\"Raw files:\", ALL_RAW_IMAGE_FILES)\n",
         "else:\n",
         "    print(\"No raw image files found. Check ZIP_PATH and extraction process.\")\n",
         "\n",
-        "# Update the global variable if needed, though it's already set above\n",
-        "# globals()['ACTUAL_RAW_DATA_ROOT'] = ACTUAL_RAW_DATA_ROOT"
+        "# Update the global variable if needed\n",
+        "globals()['ALL_RAW_IMAGE_FILES'] = ALL_RAW_IMAGE_FILES\n",
+        "globals()['ACTUAL_RAW_DATA_ROOT'] = ACTUAL_RAW_DATA_ROOT"
       ],
       "execution_count": 20,
       "outputs": [
@@ -502,24 +501,23 @@
         "os.makedirs(os.path.join(PROCESSED_PATH, 'test'))\n",
         "print(f\"Created processed data directories: {PROCESSED_PATH}/train and {PROCESSED_PATH}/test\")\n",
         "\n",
-        "# Get unique class names (NIMs) from raw filenames by searching recursively\n",
+        "# Get unique class names (NIMs) from the list of all raw filenames (obtained in step 2.1)\n",
         "class_names = set()\n",
-        "image_extensions = ['.jpg', '.jpeg', '.png']\n",
+        "if 'ALL_RAW_IMAGE_FILES' in globals():\n",
+        "    for filepath in ALL_RAW_IMAGE_FILES:\n",
+        "        filename = os.path.basename(filepath)\n",
+        "        if len(filename) >= 10:\n",
+        "            nim = filename[:10]\n",
+        "            class_names.add(nim)\n",
+        "else:\n",
+        "    print(\"Warning: ALL_RAW_IMAGE_FILES not found. Class names will not be extracted.\")\n",
         "\n",
-        "# Search recursively for image files within ACTUAL_RAW_DATA_ROOT\n",
-        "all_raw_files_recursive = glob.glob(os.path.join(ACTUAL_RAW_DATA_ROOT, '**', '*.*'), recursive=True)\n",
-        "\n",
-        "for filepath in all_raw_files_recursive:\n",
-        "    filename = os.path.basename(filepath)\n",
-        "    if len(filename) >= 10 and os.path.splitext(filename)[1].lower() in image_extensions:\n",
-        "        nim = filename[:10]\n",
-        "        class_names.add(nim)\n",
         "\n",
         "class_names = sorted(list(class_names))\n",
         "\n",
         "\n",
         "if not class_names:\n",
-        "    print(\"Error: No class names (NIMs) extracted from filenames. Check file naming convention and ACTUAL_RAW_DATA_ROOT.\")\n",
+        "    print(\"Error: No class names (NIMs) extracted from filenames. Check file naming convention and ALL_RAW_IMAGE_FILES.\")\n",
         "else:\n",
         "    print(f\"Found {len(class_names)} unique classes (NIMs).\")\n",
         "    # Create sub-folders for each class in train and test directories\n",
@@ -776,13 +774,171 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "1a50af8b"
+        "id": "d5a7d07f"
       },
       "source": [
-        "## **Section 3: Data Loading and Augmentation (Pemuatan dan Augmentasi Data)**\n",
+        "### **2.6. Inspect Class Distribution (Inspeksi Distribusi Kelas)**\n",
         "\n",
-        "**Penjelasan:** Sekarang kita akan bekerja dengan data yang sudah bersih di PROCESSED_PATH. Karena datanya sudah memiliki struktur folder per kelas (berkat pipeline preprocessing di Section 2), kita bisa menggunakan `ImageDataGenerator` dan metode `flow_from_directory` yang lebih efisien untuk memuat data dan menerapkan augmentasi secara on-the-fly."
+        "**Penjelasan:** Memeriksa sebaran jumlah gambar untuk setiap kelas (NIM) di dataset yang sudah diproses. Ini penting untuk mengetahui apakah dataset memiliki distribusi kelas yang seimbang atau tidak."
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "62c044ef"
+      },
+      "source": [
+        "# Function to count images per class in a directory\n",
+        "def count_images_per_class(directory):\n",
+        "    class_counts = {}\n",
+        "    if not os.path.exists(directory):\n",
+        "        print(f\"Warning: Directory not found: {directory}\")\n",
+        "        return class_counts\n",
+        "\n",
+        "    # List all items in the directory (should be class folders)\n",
+        "    class_folders = [d for d in os.listdir(directory) if os.path.isdir(os.path.join(directory, d))]\n",
+        "\n",
+        "    if not class_folders:\n",
+        "        print(f\"No class subfolders found in {directory}.\")\n",
+        "        return class_counts\n",
+        "\n",
+        "    for class_name in class_folders:\n",
+        "        class_path = os.path.join(directory, class_name)\n",
+        "        # Count image files within each class folder\n",
+        "        image_files = glob.glob(os.path.join(class_path, '*.*'))\n",
+        "        image_extensions = ['.jpg', '.jpeg', '.png']\n",
+        "        class_images = [f for f in image_files if os.path.splitext(f)[1].lower() in image_extensions]\n",
+        "        class_counts[class_name] = len(class_images)\n",
+        "\n",
+        "    return class_counts\n",
+        "\n",
+        "# Count images per class for training and testing data\n",
+        "train_class_counts = count_images_per_class(os.path.join(PROCESSED_PATH, 'train'))\n",
+        "test_class_counts = count_images_per_class(os.path.join(PROCESSED_PATH, 'test'))\n",
+        "\n",
+        "print(\"Training Class Distribution:\")\n",
+        "if train_class_counts:\n",
+        "    train_counts_df = pd.Series(train_class_counts)\n",
+        "    display(train_counts_df.sort_index())\n",
+        "    print(f\"\\nTotal training images: {train_counts_df.sum()}\")\n",
+        "else:\n",
+        "    print(\"No training data found in processed directory.\")\n",
+        "\n",
+        "print(\"\\nTesting Class Distribution:\")\n",
+        "if test_class_counts:\n",
+        "    test_counts_df = pd.Series(test_class_counts)\n",
+        "    display(test_counts_df.sort_index())\n",
+        "    print(f\"\\nTotal testing images: {test_counts_df.sum()}\")\n",
+        "else:\n",
+        "    print(\"No testing data found in processed directory.\")\n",
+        "\n",
+        "# Optional: Plot distribution\n",
+        "if train_class_counts or test_class_counts:\n",
+        "    all_class_names = sorted(list(set(train_class_counts.keys()) | set(test_class_counts.keys())))\n",
+        "    all_counts = pd.DataFrame({'Train': pd.Series(train_class_counts), 'Test': pd.Series(test_class_counts)}).fillna(0)\n",
+        "\n",
+        "    if not all_counts.empty:\n",
+        "        all_counts.plot(kind='bar', figsize=(15, 7))\n",
+        "        plt.title(\"Class Distribution in Processed Dataset (Train vs Test)\")\n",
+        "        plt.xlabel(\"Class (NIM)\")\n",
+        "        plt.ylabel(\"Number of Images\")\n",
+        "        plt.xticks(rotation=90)\n",
+        "        plt.tight_layout()\n",
+        "        plt.show()\n",
+        "    else:\n",
+        "        print(\"No data to plot distribution.\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0f783ac3"
+      },
+      "source": [
+        "### **2.7. Visualize Sample Images (Visualisasi Contoh Gambar)**\n",
+        "\n",
+        "**Penjelasan:** Menampilkan beberapa contoh gambar acak dari dataset yang sudah diproses (training atau testing) untuk visualisasi dan memastikan proses deteksi wajah serta cropping berjalan sesuai harapan."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "df047034"
+      },
+      "source": [
+        "import random\n",
+        "from PIL import Image\n",
+        "\n",
+        "def visualize_sample_images(directory, num_samples=20):\n",
+        "    \"\"\"\n",
+        "    Collects paths of a random sample of images from class subfolders\n",
+        "    and displays them in a grid.\n",
+        "\n",
+        "    Args:\n",
+        "        directory (str): The root directory of the dataset split (e.g., PROCESSED_PATH/train).\n",
+        "        num_samples (int): The number of random images to display.\n",
+        "    \"\"\"\n",
+        "    print(f\"Collecting sample images from {directory}...\")\n",
+        "\n",
+        "    all_image_paths = []\n",
+        "    image_extensions = ['.jpg', '.jpeg', '.png']\n",
+        "\n",
+        "    # Find all image files recursively within the directory\n",
+        "    if os.path.exists(directory):\n",
+        "        for root, _, files in os.walk(directory):\n",
+        "            for file in files:\n",
+        "                if os.path.splitext(file)[1].lower() in image_extensions:\n",
+        "                    all_image_paths.append(os.path.join(root, file))\n",
+        "    else:\n",
+        "        print(f\"Directory not found: {directory}\")\n",
+        "        return\n",
+        "\n",
+        "    if not all_image_paths:\n",
+        "        print(f\"No image files found in {directory}.\")\n",
+        "        return\n",
+        "\n",
+        "    # Select random samples\n",
+        "    num_samples = min(num_samples, len(all_image_paths)) # Don't ask for more samples than available\n",
+        "    sample_paths = random.sample(all_image_paths, num_samples)\n",
+        "\n",
+        "    print(f\"Displaying {num_samples} random sample images...\")\n",
+        "\n",
+        "    # Determine grid size\n",
+        "    cols = 5 # Number of columns in the grid\n",
+        "    rows = (num_samples + cols - 1) // cols # Calculate number of rows needed\n",
+        "\n",
+        "    plt.figure(figsize=(cols * 3, rows * 3)) # Adjust figure size based on grid\n",
+        "\n",
+        "    for i, img_path in enumerate(sample_paths):\n",
+        "        try:\n",
+        "            img = Image.open(img_path).convert('RGB')\n",
+        "            plt.subplot(rows, cols, i + 1)\n",
+        "            plt.imshow(img)\n",
+        "            plt.title(os.path.basename(os.path.dirname(img_path)), fontsize=10) # Title with Class Name (NIM)\n",
+        "            plt.axis('off')\n",
+        "        except Exception as e:\n",
+        "            print(f\"Could not load image {img_path}: {e}\")\n",
+        "            plt.subplot(rows, cols, i + 1)\n",
+        "            plt.text(0.5, 0.5, 'Error', ha='center', va='center')\n",
+        "            plt.axis('off')\n",
+        "\n",
+        "\n",
+        "    plt.tight_layout()\n",
+        "    plt.show()\n",
+        "\n",
+        "# --- Visualize samples from both train and test (optional) ---\n",
+        "# Adjust the directories and number of samples as needed\n",
+        "\n",
+        "print(\"Visualizing samples from TRAINING data:\")\n",
+        "visualize_sample_images(os.path.join(PROCESSED_PATH, 'train'), num_samples=15)\n",
+        "\n",
+        "print(\"\\nVisualizing samples from TESTING data:\")\n",
+        "visualize_sample_images(os.path.join(PROCESSED_PATH, 'test'), num_samples=5) # Display fewer test samples"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
