--- a/tasks/week_5_tasks/Task_ViT_HuggingFace.ipynb
+++ b/tasks/week_5_tasks/Task_ViT_HuggingFace.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMivQ0bl1xNREOBfX0cQv77",
+      "authorship_tag": "ABX9TyORu0abMirLDoj1G61rFyHV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -597,7 +597,7 @@
         "id": "f7887a22"
       },
       "source": [
-        "### 0.1. Install Libraries (Instalasi Library)\n",
+        "### **0.1. Install Libraries (Instalasi Library)**\n",
         "\n",
         "**Penjelasan:** Menginstal library tambahan yang mungkin diperlukan, yaitu `mtcnn` yang merupakan library kunci untuk deteksi wajah."
       ]
@@ -605,14 +605,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "a981b556"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "a981b556",
+        "outputId": "c0aff979-2603-4dc5-b807-f1e7545958c0"
       },
       "source": [
         "# Install mtcnn library\n",
-        "# !pip install mtcnn"
+        "!pip install opencv"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[31mERROR: Could not find a version that satisfies the requirement opencv (from versions: none)\u001b[0m\u001b[31m\n",
+            "\u001b[0m\u001b[31mERROR: No matching distribution found for opencv\u001b[0m\u001b[31m\n",
+            "\u001b[0m"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -620,7 +634,7 @@
         "id": "0cd8f58a"
       },
       "source": [
-        "### 0.2. Mount Google Drive (Menghubungkan Google Drive)\n",
+        "### **0.2. Mount Google Drive (Menghubungkan Google Drive**)\n",
         "\n",
         "**Penjelasan:** Menghubungkan notebook ini dengan akun Google Drive Anda. Ini diperlukan agar notebook dapat membaca file dataset gambar yang telah Anda simpan di Google Drive. Setelah menjalankan sel ini, ikuti instruksi otorisasi yang muncul."
       ]
@@ -628,12 +642,33 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7c510c84"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7c510c84",
+        "outputId": "38268ea5-1ad7-42cf-821d-6301d1983399"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "1mmwlN92LofO"
+      },
       "execution_count": null,
       "outputs": []
     }
