--- a/tasks/week_5_tasks/Task_ViT_HuggingFace.ipynb
+++ b/tasks/week_5_tasks/Task_ViT_HuggingFace.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyORu0abMirLDoj1G61rFyHV",
+      "authorship_tag": "ABX9TyMBlXV54GEoxwYbDPbKmpWZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -662,6 +662,94 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "647d31f8"
+      },
+      "source": [
+        "## **Section 1: Import Libraries and Environment Setup (Impor Library dan Pengaturan Lingkungan)**\n",
+        "\n",
+        "**Penjelasan:** Mengimpor semua modul yang dibutuhkan dan mendefinisikan variabel-variabel global, termasuk path untuk data mentah dan data yang akan diproses."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "29c5d6a5"
+      },
+      "source": [
+        "### 1.1. Import Core Libraries (Impor Library Utama)\n",
+        "\n",
+        "**Penjelasan:** Mengimpor library utama seperti tensorflow, keras, numpy, matplotlib, os, zipfile, cv2 (OpenCV), glob, shutil yang akan digunakan sepanjang proyek ini."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2f552c82"
+      },
+      "source": [
+        "import tensorflow as tf\n",
+        "from tensorflow import keras\n",
+        "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Flatten, Dense, Dropout, BatchNormalization, InputLayer\n",
+        "from tensorflow.keras.optimizers import Adam\n",
+        "from tensorflow.keras.callbacks import ModelCheckpoint, EarlyStopping\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "import os\n",
+        "import zipfile\n",
+        "import cv2 # Import OpenCV\n",
+        "import glob # To list files\n",
+        "import shutil # To manage directories\n",
+        "from sklearn.metrics import classification_report, confusion_matrix\n",
+        "import seaborn as sns # For confusion matrix visualization"
+      ],
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1e572564"
+      },
+      "source": [
+        "### **1.2. Define Configurations (Definisi Konfigurasi)**\n",
+        "\n",
+        "**Penjelasan:** Mendefinisikan variabel-variabel konfigurasi yang akan digunakan di seluruh notebook, termasuk path ke dataset, ukuran gambar yang akan digunakan, ukuran batch untuk training, jumlah epoch, dan jumlah kelas (mahasiswa)."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "48aff23b"
+      },
+      "source": [
+        "# Define Directory Paths (Definisi Path Direktori)\n",
+        "# Path ke file zip di Google Drive\n",
+        "ZIP_PATH = '/content/drive/MyDrive/Dataset/Dataset Sistem Presensi Wajah V1.0.zip'\n",
+        "# Path untuk mengekstrak data mentah (sebelum deteksi wajah)\n",
+        "RAW_DATA_PATH = '/content/raw_dataset'\n",
+        "# Path untuk menyimpan dataset yang sudah bersih (setelah deteksi wajah)\n",
+        "PROCESSED_PATH = '/content/processed_dataset'\n",
+        "\n",
+        "# Define Image Parameters (Definisi Parameter Gambar)\n",
+        "IMG_HEIGHT = 128 # Ukuran yang lebih kecil cocok untuk model dari dasar\n",
+        "IMG_WIDTH = 128\n",
+        "CHANNELS = 3 # RGB color images\n",
+        "\n",
+        "# Define Training Parameters (Definisi Parameter Pelatihan)\n",
+        "BATCH_SIZE = 32\n",
+        "EPOCHS = 50 # Will be controlled by Early Stopping\n",
+        "# NUM_CLASSES will be determined by the data generator later\n",
+        "NUM_CLASSES = None # Placeholder"
+      ],
+      "execution_count": 4,
+      "outputs": []
     },
     {
       "cell_type": "code",
