Fix: Process images from subdirectories in raw dataset
Updated the face detection and cropping pipeline (Section 2.4) and directory structure preparation (Section 2.3) to correctly read image files from class subfolders within the raw data directory. This resolves the issue where no images were being processed as the previous code expected all images to be directly in the raw data path. Class names (NIMs) are now extracted from the subdirectory names.

--- a/tasks/week_5_tasks/Task_ViT_HuggingFace.ipynb
+++ b/tasks/week_5_tasks/Task_ViT_HuggingFace.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMtQOND0bem6n/ODbBbSH/o",
+      "authorship_tag": "ABX9TyN9KFy9xG6BX+pQ61xXGyaH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,13 +56,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "a981b556",
-        "outputId": "c0aff979-2603-4dc5-b807-f1e7545958c0"
+        "outputId": "420e494a-e4b6-4350-8b11-6595b5e29fc4"
       },
       "source": [
         "# Install mtcnn library\n",
         "!pip install opencv"
       ],
-      "execution_count": 1,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -93,19 +93,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7c510c84",
-        "outputId": "38268ea5-1ad7-42cf-821d-6301d1983399"
+        "outputId": "ae08a8df-0b05-4de0-f7d5-3a8c96e552c8"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 2,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ]
@@ -156,7 +156,7 @@
         "from sklearn.metrics import classification_report, confusion_matrix\n",
         "import seaborn as sns # For confusion matrix visualization"
       ],
-      "execution_count": 3,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -195,7 +195,7 @@
         "# NUM_CLASSES will be determined by the data generator later\n",
         "NUM_CLASSES = None # Placeholder"
       ],
-      "execution_count": 4,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -204,7 +204,7 @@
       "metadata": {
         "id": "1mmwlN92LofO"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -236,7 +236,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "454e6dae",
-        "outputId": "e1e52ab2-227e-4383-bbec-3dc994611817"
+        "outputId": "8127744c-f8af-42a8-f099-f94040fc8376"
       },
       "source": [
         "print(f\"Extracting {ZIP_PATH} to {RAW_DATA_PATH}...\")\n",
@@ -278,19 +278,13 @@
         "    print(\"\\nWarning: Could not identify the main folder containing raw images within the extracted directory.\")\n",
         "    print(\"Please manually inspect the extracted contents and update RAW_DATA_PATH if necessary.\")"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Extracting /content/drive/MyDrive/Dataset/Dataset Sistem Presensi Wajah V1.0.zip to /content/raw_dataset...\n",
-            "Extraction complete.\n",
-            "\n",
-            "Contents of /content/raw_dataset after extraction: ['Dataset Sistem Presensi Wajah V1.0']\n",
-            "\n",
-            "Identified raw image folder: /content/raw_dataset/Dataset Sistem Presensi Wajah V1.0\n",
-            "Updated RAW_DATA_PATH: /content/raw_dataset/Dataset Sistem Presensi Wajah V1.0\n"
+            "Extracting /content/drive/MyDrive/Dataset/Dataset Sistem Presensi Wajah V1.0.zip to /content/raw_dataset...\n"
           ]
         }
       ]
@@ -309,11 +303,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "30b5147d",
-        "outputId": "7d51564d-3fae-4e5f-96f2-47d3a06a44f8"
+        "id": "30b5147d"
       },
       "source": [
         "# Download the Haar Cascade XML file\n",
@@ -335,16 +325,8 @@
         "else:\n",
         "    print(\"OpenCV Haar Cascade face detector initialized successfully.\")"
       ],
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "OpenCV Haar Cascade face detector initialized successfully.\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -360,11 +342,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "40f7514e",
-        "outputId": "4aad468a-3620-4f91-d636-c3e99aa20b72"
+        "id": "40f7514e"
       },
       "source": [
         "# Remove existing processed directory if it exists to start fresh\n",
@@ -385,18 +363,15 @@
         "\n",
         "print(f\"Created processed directories: {PROCESSED_TRAIN_DIR} and {PROCESSED_TEST_DIR}\")\n",
         "\n",
-        "# Identify class names (NIMs) from raw image filenames\n",
-        "# We assume the raw images are directly in RAW_DATA_PATH or its immediate subfolder\n",
-        "# if RAW_DATA_PATH was updated in step 2.1\n",
-        "raw_image_files = glob.glob(os.path.join(RAW_DATA_PATH, '*.jpg'))\n",
+        "# Identify class names (NIMs) from the subdirectories within RAW_DATA_PATH\n",
+        "# Assuming RAW_DATA_PATH now points to the main folder containing class subfolders\n",
+        "class_nims = sorted([d for d in os.listdir(RAW_DATA_PATH) if os.path.isdir(os.path.join(RAW_DATA_PATH, d))])\n",
         "\n",
-        "# Extract unique NIMs (first 10 characters of filename)\n",
-        "class_nims = sorted(list(set([os.path.basename(f)[:10] for f in raw_image_files if len(os.path.basename(f)) >= 10])))\n",
         "\n",
         "if not class_nims:\n",
-        "    print(\"Warning: No class NIMs found based on filename format (first 10 characters). Please check filenames in the raw data directory.\")\n",
+        "    print(\"Warning: No class subfolders found within the raw data directory. Please check the structure of the extracted data.\")\n",
         "else:\n",
-        "    print(f\"\\nIdentified {len(class_nims)} unique classes (NIMs). Example: {class_nims[:10]}...\")\n",
+        "    print(f\"\\nIdentified {len(class_nims)} unique classes (NIMs) from subfolders. Example: {class_nims[:10]}...\")\n",
         "\n",
         "    # Create class sub-folders in both train and test processed directories\n",
         "    for nim in class_nims:\n",
@@ -408,18 +383,8 @@
         "NUM_CLASSES = len(class_nims)\n",
         "print(f\"Updated NUM_CLASSES: {NUM_CLASSES}\")"
       ],
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Created processed directories: /content/processed_dataset/train and /content/processed_dataset/test\n",
-            "Warning: No class NIMs found based on filename format (first 10 characters). Please check filenames in the raw data directory.\n",
-            "Updated NUM_CLASSES: 0\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -443,15 +408,19 @@
       },
       "source": [
         "import random\n",
+        "import os\n",
+        "import cv2\n",
+        "import glob\n",
+        "import shutil\n",
         "\n",
         "def process_and_save_faces_opencv(source_dir, processed_train_dir, processed_test_dir, face_cascade, img_width, img_height, test_split=0.2):\n",
         "    \"\"\"\n",
-        "    Processes images in source_dir, detects faces using OpenCV Haar Cascade,\n",
+        "    Processes images in source_dir (including subdirectories), detects faces using OpenCV Haar Cascade,\n",
         "    crops them, and saves them to processed_train_dir or processed_test_dir\n",
-        "    based on the test_split ratio.\n",
+        "    based on the test_split ratio. Assumes source_dir contains subdirectories named after classes (NIMs).\n",
         "\n",
         "    Args:\n",
-        "        source_dir (str): Directory containing raw images (all in one folder).\n",
+        "        source_dir (str): Directory containing class subdirectories.\n",
         "        processed_train_dir (str): Directory to save processed training images.\n",
         "        processed_test_dir (str): Directory to save processed testing images.\n",
         "        face_cascade (cv2.CascadeClassifier): Initialized OpenCV Haar Cascade detector.\n",
@@ -463,82 +432,78 @@
         "        print(\"Face cascade not initialized. Skipping face detection and cropping.\")\n",
         "        return\n",
         "\n",
-        "    image_files = glob.glob(os.path.join(source_dir, '*.jpg'))\n",
-        "    random.shuffle(image_files) # Shuffle to ensure random train/test split\n",
-        "\n",
         "    total_processed = 0\n",
         "    skipped_no_face = 0\n",
         "    skipped_error = 0\n",
         "\n",
         "    print(f\"\\nStarting face detection and cropping from {source_dir}...\")\n",
         "\n",
-        "    for img_path in image_files:\n",
-        "        try:\n",
-        "            # Read image\n",
-        "            img = cv2.imread(img_path)\n",
-        "            if img is None:\n",
-        "                print(f\"Warning: Could not read image {img_path}. Skipping.\")\n",
-        "                skipped_error += 1\n",
-        "                continue\n",
+        "    # Walk through subdirectories to find images\n",
+        "    for class_dir in os.listdir(source_dir):\n",
+        "        class_path = os.path.join(source_dir, class_dir)\n",
+        "        if os.path.isdir(class_path):\n",
+        "            nim = class_dir # Class name is the directory name (NIM)\n",
+        "            image_files = glob.glob(os.path.join(class_path, '*.jpg'))\n",
+        "            random.shuffle(image_files) # Shuffle files within each class\n",
         "\n",
-        "            # Convert to grayscale for face detection\n",
-        "            gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
+        "            for img_path in image_files:\n",
+        "                try:\n",
+        "                    # Read image\n",
+        "                    img = cv2.imread(img_path)\n",
+        "                    if img is None:\n",
+        "                        print(f\"Warning: Could not read image {img_path}. Skipping.\")\n",
+        "                        skipped_error += 1\n",
+        "                        continue\n",
         "\n",
-        "            # Detect faces\n",
-        "            # parameters: image, scaleFactor, minNeighbors, minSize\n",
-        "            faces = face_cascade.detectMultiScale(gray, scaleFactor=1.1, minNeighbors=5, minSize=(30, 30))\n",
+        "                    # Convert to grayscale for face detection\n",
+        "                    gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
         "\n",
-        "            if len(faces) == 0:\n",
-        "                # print(f\"No face detected in {img_path}. Skipping.\")\n",
-        "                skipped_no_face += 1\n",
-        "                continue\n",
+        "                    # Detect faces\n",
+        "                    # parameters: image, scaleFactor, minNeighbors, minSize\n",
+        "                    faces = face_cascade.detectMultiScale(gray, scaleFactor=1.1, minNeighbors=5, minSize=(30, 30))\n",
         "\n",
-        "            # Assume the first detected face is the primary one (usually the largest)\n",
-        "            (x, y, w, h) = faces[0]\n",
+        "                    if len(faces) == 0:\n",
+        "                        # print(f\"No face detected in {img_path}. Skipping.\")\n",
+        "                        skipped_no_face += 1\n",
+        "                        continue\n",
         "\n",
-        "            # Add a margin around the face bounding box\n",
-        "            margin_ratio = 0.2 # Add 20% margin\n",
-        "            x_m = max(0, int(x - w * margin_ratio))\n",
-        "            y_m = max(0, int(y - h * margin_ratio))\n",
-        "            w_m = min(img.shape[1] - x_m, int(w * (1 + 2 * margin_ratio))) # Ensure margin doesn't go beyond image bounds\n",
-        "            h_m = min(img.shape[0] - y_m, int(h * (1 + 2 * margin_ratio))) # Ensure margin doesn't go beyond image bounds\n",
+        "                    # Assume the first detected face is the primary one (usually the largest)\n",
+        "                    (x, y, w, h) = faces[0]\n",
+        "\n",
+        "                    # Add a margin around the face bounding box\n",
+        "                    margin_ratio = 0.2 # Add 20% margin\n",
+        "                    x_m = max(0, int(x - w * margin_ratio))\n",
+        "                    y_m = max(0, int(y - h * margin_ratio))\n",
+        "                    w_m = min(img.shape[1] - x_m, int(w * (1 + 2 * margin_ratio))) # Ensure margin doesn't go beyond image bounds\n",
+        "                    h_m = min(img.shape[0] - y_m, int(h * (1 + 2 * margin_ratio))) # Ensure margin doesn't go beyond image bounds\n",
         "\n",
         "\n",
-        "            # Crop the face with margin\n",
-        "            face_crop = img[y_m:y_m+h_m, x_m:x_m+w_m]\n",
+        "                    # Crop the face with margin\n",
+        "                    face_crop = img[y_m:y_m+h_m, x_m:x_m+w_m]\n",
         "\n",
-        "            # Resize the cropped face to the target size\n",
-        "            face_resized = cv2.resize(face_crop, (img_width, img_height))\n",
+        "                    # Resize the cropped face to the target size\n",
+        "                    face_resized = cv2.resize(face_crop, (img_width, img_height))\n",
         "\n",
-        "            # Extract NIM (class name) from filename\n",
-        "            filename = os.path.basename(img_path)\n",
-        "            if len(filename) < 10:\n",
-        "                 print(f\"Warning: Filename {filename} is too short to extract NIM. Skipping.\")\n",
-        "                 skipped_error += 1\n",
-        "                 continue\n",
+        "                    # Determine whether to save to train or test directory\n",
+        "                    if random.random() < test_split:\n",
+        "                        save_dir = os.path.join(processed_test_dir, nim)\n",
+        "                    else:\n",
+        "                        save_dir = os.path.join(processed_train_dir, nim)\n",
         "\n",
-        "            nim = filename[:10] # Assuming first 10 chars are NIM\n",
+        "                    # Ensure the class directory exists (should be already created in 2.3, but good practice)\n",
+        "                    os.makedirs(save_dir, exist_ok=True)\n",
         "\n",
-        "            # Determine whether to save to train or test directory\n",
-        "            if random.random() < test_split:\n",
-        "                save_dir = os.path.join(processed_test_dir, nim)\n",
-        "            else:\n",
-        "                save_dir = os.path.join(processed_train_dir, nim)\n",
+        "                    # Define save path using the original filename\n",
+        "                    save_path = os.path.join(save_dir, os.path.basename(img_path))\n",
         "\n",
-        "            # Ensure the class directory exists\n",
-        "            os.makedirs(save_dir, exist_ok=True)\n",
+        "                    # Save the processed image\n",
+        "                    cv2.imwrite(save_path, face_resized)\n",
+        "                    total_processed += 1\n",
         "\n",
-        "            # Define save path\n",
-        "            save_path = os.path.join(save_dir, filename)\n",
-        "\n",
-        "            # Save the processed image\n",
-        "            cv2.imwrite(save_path, face_resized)\n",
-        "            total_processed += 1\n",
-        "\n",
-        "        except Exception as e:\n",
-        "            print(f\"An error occurred while processing {img_path}: {e}\")\n",
-        "            skipped_error += 1\n",
-        "            continue\n",
+        "                except Exception as e:\n",
+        "                    print(f\"An error occurred while processing {img_path}: {e}\")\n",
+        "                    skipped_error += 1\n",
+        "                    continue\n",
         "\n",
         "    print(f\"\\nFace detection and cropping complete.\")\n",
         "    print(f\"Total images processed: {total_processed}\")\n",
